Fix #19
Move .horizontal class ID to scrollbar node, where it ought to be

--- a/B00merang Dark/gtk-3.20/gtk-widgets.css
+++ b/B00merang Dark/gtk-3.20/gtk-widgets.css
@@ -1711,7 +1711,7 @@ scrollbar slider {
                                           #000000 51%);
 }
 
-scrollbar slider.horizontal {
+scrollbar.horizontal slider {
     min-width: 40px;
     min-height: 10px;
     background: linear-gradient(to bottom, #959595 15%, 
@@ -1719,14 +1719,12 @@ scrollbar slider.horizontal {
                                           #000000 51%);
 }
 
-scrollbar slider:hover,
-scrollbar slider.vertical:hover {
+scrollbar slider:hover {
     box-shadow: 0 0 0 1px mix(shade(@theme_bg_color, 0.87), @theme_fg_color, 0.51);
     background-color: mix(@theme_bg_color, @theme_fg_color, 0.31);
 }
 
-scrollbar slider:active,
-scrollbar slider.vertical:active {
+scrollbar slider:active {
     box-shadow: 0 0 0 1px mix(shade(@theme_bg_color, 0.87), @theme_fg_color, 0.61);
 }
 
